agregue formularios y validaciones

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica CSS</title>
+    <title>retos 2 y 3</title>
      <STYle>
          h2 {color: chartreuse;}
          h1 {text-align: center;}
