hice los cambios indicados por el profesor

--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>retos 2 y 3</title>
-     <STYle>
+     <style>
          h2 {color: chartreuse;margin: 0;}
          h1 {text-align: center;margin: 0;}
          h3 {color: greenyellow;margin: 0;}
@@ -16,13 +16,13 @@
 
 
 
-     </STYle>
+     </style>
 
 </head>
 <body>
     <header style="background-color:red ;">
      <fieldset>
-     <H1 style="color:white;" >Mi pagina Personal</H1>
+     <h1 style="color:white;" >Mi pagina Personal</h1>
             </fieldset>
       </header>
 
@@ -36,7 +36,7 @@
           <img src="/Imagenes/alpaca.jfif" alt="" width="200" height="200">  
       </Main>
 
-      <Main style="background-color: orange;">
+      <section style="background-color: orange;">
 
         <h3> DESCRIPCION</h3>
 
@@ -46,8 +46,8 @@
           <img src="/Imagenes/alpaca.jfif" alt="" width="200" height="200">  
           <br>
            
-      </Main>
-      <main style="background-color:gray;">
+      </section>
+      <section style="background-color:gray;">
         <H4>Formulario de contacto</H4>
         <form action="#">
           <fieldset>
@@ -101,7 +101,7 @@
         </form>
 
 
-      </main>
+    </section>
       
       <footer style="background-color: red;">
         <strong> 
