--- a/Tags-form.html
+++ b/Tags-form.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>retos 2 y 3</title>
      <STYle>
-         h2 {color: chartreuse;margin: 0;}
+         h2 {color: chartreuse;margin: 0; text-align: center;}
          h1 {text-align: center;margin: 0;}
          h3 {color: greenyellow;margin: 0;}
          footer {height: 50px;}
@@ -13,8 +14,6 @@
          h1 {font-size: 50px;}     
          body{padding: 30px;}
          h3 {border-style: solid;}
-
-
 
      </STYle>
 
@@ -28,7 +27,7 @@
 
       <Main style="background-color: blue;">
 
-        <h2> Historia</h2>
+        <h2> Sobre mi</h2>
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum ratione consequatur iure assumenda eligendi reiciendis tenetur voluptates nostrum, modi error autem quae, quasi reprehenderit nesciunt impedit rerum sit! Sint, quibusdam.</p>
          <br>
