corregi el titulo reto 4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>retos 2 y 3</title>
+    <title>reto 4</title>
     <link rel="stylesheet" href="styles/main.css">
      
 </head>
@@ -12,7 +12,7 @@
      <fieldset>
      <h1 style="color:white;" >Mi pagina Personal</h1>
      <p>Hola Mi nombre es Rodolfo Beltran</p>
-     <img src="/Imagenes/yo.jpg" alt="" width="300" height="400">
+     <img src="/imgenes/IMG_20191222_113854.jpg" alt="" width="300" height="400">
             </fieldset>
       </header>
 
@@ -70,14 +70,8 @@
     <fieldset>
         <bUTton>Enviar</bUTton>
         <button type="reset"> reset</button>
-    </fieldset>
-
-   
-
-
-
+    </fieldset> 
         </form>
-
 
     </section>
       
