versión final hackaton4

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="skill2">CSS</p>
             <p class="skill3">JAVASCRIPT</p>
           </div>
-          <div>
+          <div class="firstgroupskills">
             <div class="bar1">
               <div class="skill html">10%</div>
             </div>
